--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "firebase deploy", 
+    "emulators:start": "firebase emulators:start", 
+    "build": "npm run build", 
+    "serve": "firebase serve"
   },
   "repository": {
     "type": "git",
@@ -15,5 +19,12 @@
   "bugs": {
     "url": "https://github.com/Icesito68/firebase-dpl/issues"
   },
-  "homepage": "https://github.com/Icesito68/firebase-dpl#readme"
+  "homepage": "https://github.com/Icesito68/firebase-dpl#readme",
+  "dependencies": {
+    "firebase-admin": "^11.0.0",  
+    "firebase-functions": "^4.0.0"
+  },
+  "devDependencies": {
+    "firebase-tools": "^11.0.0"
+  }
 }
