--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,32 +1,16 @@
 name: Deploy to Firebase Hosting
-
-on:
-    push:
-        branches:
-            - main  # Make sure this matches your branch name
+on: [push]
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v2
-
-            - name: Set up Node.js
-              uses: actions/setup-node@v2
-              with:
-                node-version: '18'
-
-            - name: Install Firebase CLI
-              run: npm install -g firebase-tools
-
-            - name: Set up Firebase credentials
-              run: echo "${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}" > "$HOME/service-account.json"
-
-            - name: Deploy to Firebase Hosting
-              env:
-                GOOGLE_APPLICATION_CREDENTIALS: "$HOME/service-account.json"
-              run: |
-                firebase deploy --only hosting
-base deploy --only hosting
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@main
+      - name: Deploy to Firebase
+        uses: docker://w9jds/firebase-action:master
+        with:
+          args: deploy --only hosting
+        env:
+          FIREBASE_TOKEN: ${{ secrets.PRIVATE_KEY }}
